--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
       <p>A ZIP archive containing the GeoLocator application.</p>
       <a href="geolocator.zip" download class="download-btn">Download</a>
     </div>
+        <div class="tool">
+      <img src="Iploggerpreview.jpeg" alt="IP Logger Preview" class="preview-image">
+      <h2>Multitool</h2>
+      <p>Discord IP logger that can be run through www.pythonanywhere.com</p>
+      <a href="DiscordIPLogger.py" download class="download-btn">Download</a>
+    </div
   </main>
   <footer>
     <p>© 2024 Your Name. All Rights Reserved.</p>
