--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
         <div class="tool">
       <img src="Iploggerpreview.jpeg" alt="IP Logger Preview" class="preview-image">
-      <h2>Multitool</h2>
+      <h2>IP Logger</h2>
       <p>Discord IP logger that can be run through www.pythonanywhere.com</p>
       <a href="DiscordIPLogger.py" download class="download-btn">Download</a>
     </div
