--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div
   </main>
   <footer>
-    <p>© 2024 Your Name. All Rights Reserved.</p>
+    <p>© 2024 Concerfate. All Rights Reserved.</p>
   </footer>
   <div id="fullscreenModal" class="fullscreen-modal">
     <span id="closeFullscreen" class="close-fullscreen">&times;</span>
