--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Concerfate's Tools</title>
   <link rel="stylesheet" href="styles.css">
-  <!-- Google Fonts for modern typography -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -38,12 +37,12 @@
       <p>A ZIP archive containing the GeoLocator application.</p>
       <a href="geolocator.zip" download class="download-btn">Download</a>
     </div>
-        <div class="tool">
+    <div class="tool">
       <img src="Iploggerpreview.jpeg" alt="IP Logger Preview" class="preview-image">
       <h2>IP Logger</h2>
       <p>Discord IP logger that can be run through www.pythonanywhere.com</p>
       <a href="DiscordIPLogger.py" download class="download-btn">Download</a>
-    </div
+    </div>
   </main>
   <footer>
     <p>© 2024 Concerfate. All Rights Reserved.</p>
